--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,11 +2,11 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" 
   workflow_dispatch:
   push:
     branches:
-      - main
+    - main
 
 jobs:
   generate:
@@ -19,12 +19,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-        
+      
       - name: Generate Snake Animation
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
           
       - name: Deploy to Output Branch
         uses: peaceiris/actions-gh-pages@v3
